--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# latex
+
+*.bbl
+*.bcf
+*.blg
+*.aux
+*.run.xml
+*.synctex.gz
+*.toc
+*.log
+
+nbproject/
+manifest.mf
+build.xml
