--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ hs_err_pid*
 *.toc
 *.log
 *.lof
+*.lot
 
 nbproject/
 manifest.mf
@@ -31,3 +32,5 @@ build.xml
 
 src/best-practice/.idea/*
 src/best-practice/*.iml
+
+.idea/
