added build file

--- a/.gitignore
+++ b/.gitignore
@@ -22,13 +22,14 @@ hs_err_pid*
 *.toc
 *.log
 *.lof
+*.lot
 
 nbproject/
 manifest.mf
 build.xml
-/src/best-practice/dist/
-/src/best-practice/build/
-
+src/best-practice/dist/
+src/best-practice/build/
+src/best-practice/out/
 src/best-practice/.idea/*
 src/best-practice/*.iml
 workspace.xml
