--- a/.gitignore
+++ b/.gitignore
@@ -22,13 +22,17 @@ hs_err_pid*
 *.toc
 *.log
 *.lof
-
+*.lot
 nbproject/
 manifest.mf
 build.xml
-/src/best-practice/dist/
-/src/best-practice/build/
-
+src/best-practice/dist/
+src/best-practice/build/
+src/best-practice/out/
 src/best-practice/.idea/*
 src/best-practice/*.iml
+src/monolithic/out/
+src/monolithic/.idea/
+src/monolithic/build
+src/monolithic/dist
 workspace.xml
