--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ hs_err_pid*
 
 nbproject/
 manifest.mf
-build.xml
+#build.xml
 src/best-practice/dist/
 src/best-practice/build/
 src/best-practice/out
