added main class to build script

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,6 @@ src/best-practice/build/
 src/best-practice/out/
 src/best-practice/.idea/*
 src/best-practice/*.iml
+src/monolithic/out/
+src/monolithic/.idea/
 workspace.xml
