--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ src/best-practice/out/
 src/best-practice/.idea/*
 src/best-practice/*.iml
 workspace.xml
+src/monolithic/out/
+src/monolithic/.idea/
